terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_instance" "my_ec2" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  security_groups        = [aws_security_group.ec2_sg.name]

  tags = {
    Name = "MyEC2Instance"
  }
}
